--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <link rel="stylesheet" href="./src/dist.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -16,9 +18,11 @@
 
     <title>React & Tailwindcss</title>
   </head>
-  <body >
+  <body class="bg-white bg-dim-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div  id="root"></div>
-
+  <script>
+    
+  </script>
   </body>
 </html>
